lostCTRL/force-app/main/default/objects/Doctor__c/fields/BirthdayDay__c.field-meta.xml
<CustomField>
    <fullName>BirthdayDay__c</fullName>
    <formula>TEXT(DAY( DateOfBirth__c - 1  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BirthdayDay</label>
    <type>Text</type>
</CustomField>