lostCTRL/force-app/main/default/objects/Doctor__c/fields/BirthdayMonth__c.field-meta.xml
<CustomField>
    <fullName>BirthdayMonth__c</fullName>
    <formula>TEXT(MONTH( DateOfBirth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BirthdayMonth</label>
    <type>Text</type>
</CustomField>