lostCTRL/force-app/main/default/objects/Doctor__c/fields/Emial__c.field-meta.xml
<CustomField>
    <fullName>Emial__c</fullName>
    <label>Emial</label>
    <type>Email</type>
</CustomField>