lostCTRL/force-app/main/default/objects/Doctor__c/fields/imageName__c.field-meta.xml
<CustomField>
    <fullName>imageName__c</fullName>
    <label>imageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>